--- a/conf/config.py.example
+++ b/conf/config.py.example
@@ -2,7 +2,7 @@
 class market:
     #the forge
     region = 10000002
-    unkah = 30001679
+    home = 30001679
     server = 'esi.evetech.net'
     routes = {
         'ids' : '/latest/universe/ids',
